--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -35,6 +35,7 @@ body{
 
 @import "admin-styles/mixin";
 
+@import "home";
 // admin dashboard imports
 @import "admin-styles/dashboard";
 @import "admin-styles/products";
