--- a/frontend/src/styles/home.scss
+++ b/frontend/src/styles/home.scss
@@ -2,7 +2,7 @@
   padding: 2rem 5%;
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 4rem);
+  // height: calc(100vh - 4rem);
   width: 100%;
   // border: 1px solid black;
 
@@ -30,9 +30,62 @@
     display: flex;
     gap: 1rem;
     overflow-x: auto;
+    // border: 2px solid black;
+    // height: auto;
 
     &::-webkit-scrollbar{
       display: none;
+    }
+  }
+}
+
+.product-card{
+  
+  width: 18.75rem;
+  height: 25rem;
+  padding: 1rem;
+  flex: none;
+  @include flex(column, flex-start, center, 4px);
+  position: relative;
+  background-color: white;
+
+  &:hover > div {
+    opacity: 1;
+  }
+
+  img {
+    @include square(calc(18.75rem - 3rem));
+    object-fit: contain;
+    margin: 1rem;
+    
+  }
+
+  span{
+    font-weight: 700;
+    font-size: 1.1rem;
+  }
+
+  >div{
+    opacity: 0;
+    position: absolute;
+    @include square(100%);
+    top: 0;
+    left: 0;
+    background-color: #0000006b;
+    @include flex;
+    button {
+      @include flex;
+      @include square(3rem);
+      border-radius: 100%;
+      border: none;
+      cursor: pointer;
+      background-color: $color3;
+      color: $color1;
+      font-size: 1.1rem;
+      transition: all 0.3s;
+      &:hover{
+        rotate: 20deg;
+      }
     }
   }
 }
