--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -36,6 +36,7 @@ body{
 @import "admin-styles/mixin";
 
 @import "home";
+@import "cart";
 // admin dashboard imports
 @import "admin-styles/dashboard";
 @import "admin-styles/products";
