shipping.tsx page created with styling in shipping.scss

--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -37,6 +37,7 @@ body{
 
 @import "home";
 @import "cart";
+@import "shipping";
 // admin dashboard imports
 @import "admin-styles/dashboard";
 @import "admin-styles/products";
