--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -39,6 +39,7 @@ body{
 @import "cart";
 @import "shipping";
 @import "login";
+@import "search.scss";
 // admin dashboard imports
 @import "admin-styles/dashboard";
 @import "admin-styles/products";
