skeleton loader created.

--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -325,7 +325,7 @@ body{
 }
 
 .skeleton-shape{
-  height: 30px;
+  height: 3rem;
   width: 100%;
   background-color: #ddd;
   margin-bottom: 10px;
